# FraudGuard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py  templates.py  test.py
.dvc/: config
.github/workflows/: cicd.yaml
Exp/: data_ingestion.ipynb  data_transformation.ipynb  data_validation.ipynb  model_evaluation.ipynb  model_training.ipynb
artifacts/data_transformation/preprocess/: .gitignore  preprocessor.pkl
artifacts/data_transformation/process/: .gitignore  test_processed.npy
artifacts/data_transformation/split/: test.csv  train.csv
artifacts/model_evaluation/: .gitignore
artifacts/model_trainer/: best_model_info.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config_file/: config.yaml  params.yaml  schema.yaml
k8s/: deployment.yaml  service.yaml
mlruns/0/: meta.yaml
mlruns/0/87e5481aea8a40daa82bddb455f1fd29/: meta.yaml
mlruns/0/ce65be923c48471d9a206d085c75acc1/: meta.yaml
notebooks/: data_ingestion.ipynb  data_transformation.ipynb  data_validation.ipynb  eda.ipynb  model_evaluation.ipynb  model_training.ipynb
notebooks/exp/: eda.ipynb  model_training.ipynb
preprocess/: le.pkl
src/FraudGuard/: __init__.py
templates/: index.html  result.html
test/: test_evaluation.py  test_ingestion.py  test_trainer.py  test_transformation.py  test_validation.py
tests/: test_core.py  test_evaluation.py  test_ingestion.py  test_prediction.py  test_trainer.py  test_transformation.py  test_validation.py
(+56 files in other folders)
